# GPT-implementation-from-scratch

./: .gitignore  README.md  generate.py  pyproject.toml  requirements.txt  train.py
config/: config.yaml
notebooks/: gpt_dev.ipynb
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py
src/model/: __init__.py  attention.py  block.py  feedforward.py  gpt.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  tokenizer.py
